Added README's and the module structure.

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,14 @@
 
 	<groupId>de.pandigo</groupId>
 	<artifactId>ms-template-project</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<version>${global.version}</version>
+	<modules>
+		<module>ms-business</module>
+		<module>ms-ws</module>
+		<module>ms-persistence</module>
+		<module>ms-tests</module>
+	</modules>
+	<packaging>pom</packaging>
 
 	<name>ms-template-project</name>
 	<description>Demo project for Spring Boot</description>
@@ -22,6 +28,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<global.version>0.0.1-SNAPSHOT</global.version>
 	</properties>
 
 	<dependencies>
