--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>pom</packaging>
 
 	<name>ms-template-project</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Template project for my Microservice Archetype</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -29,9 +29,11 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<global.version>0.0.1-SNAPSHOT</global.version>
+		<start-class>de.pandigo.mstemplateproject.MsTemplateProjectApplication</start-class>
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -54,6 +56,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
