Cleaned up dependencies and moved the main file into the ms-ws module because the tutorial from spring.io suggested it. And because I had problems to build the deployment jar. With the main class now moved it seems to work.

--- a/ms-business/pom.xml
+++ b/ms-business/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>ms-business</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>de.pandigo</groupId>
+            <artifactId>ms-persistence</artifactId>
+            <version>${global.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
