Added REST integration tests and the ms-commons module.

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 		<module>ms-ws</module>
 		<module>ms-persistence</module>
 		<module>ms-tests</module>
-	</modules>
+        <module>ms-commons</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<name>ms-template-project</name>
