--- a/ms-ws/pom.xml
+++ b/ms-ws/pom.xml
@@ -31,6 +31,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jsondoc</groupId>
+            <artifactId>spring-boot-starter-jsondoc</artifactId>
+            <version>${jsondoc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsondoc</groupId>
+            <artifactId>jsondoc-ui-webjar</artifactId>
+            <version>${jsondoc.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
