--- a/ms-ws/pom.xml
+++ b/ms-ws/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>jsondoc-ui-webjar</artifactId>
             <version>${jsondoc.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
