--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<global.version>0.0.1-SNAPSHOT</global.version>
-		<start-class>de.pandigo.MsTemplateProjectApplication</start-class>
+		<start-class>de.pandigo.mountains.MsTemplateProjectApplication</start-class>
 		<jsondoc.version>1.2.17</jsondoc.version>
 	</properties>
 
