--- a/ms-business/pom.xml
+++ b/ms-business/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>ms-template-project</artifactId>
-        <groupId>de.pandigo</groupId>
+        <groupId>org.wscale</groupId>
         <version>${global.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>de.pandigo</groupId>
+            <groupId>org.wscale</groupId>
             <artifactId>ms-persistence</artifactId>
             <version>${global.version}</version>
         </dependency>
