--- a/ms-business/pom.xml
+++ b/ms-business/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>ms-commons</artifactId>
             <version>${global.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
