--- a/ms-business/pom.xml
+++ b/ms-business/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mountains</artifactId>
         <groupId>org.wscale</groupId>
-        <version>${global.version}</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>org.wscale</groupId>
             <artifactId>ms-persistence</artifactId>
-            <version>${global.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.wscale</groupId>
             <artifactId>ms-commons</artifactId>
-            <version>${global.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
