Moved the build target for maven to the WS-Module so that is not inherited to all module poms. And created an ms-commons-tests module that can be referenced as a dependency with the scope test so that everything that is under src/main/java can be used for other tests in other modules.

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 		<module>ms-business</module>
 		<module>ms-ws</module>
 		<module>ms-tests</module>
-    </modules>
+		<module>ms-commons-tests</module>
+	</modules>
 	<packaging>pom</packaging>
 
 	<name>mountains</name>
@@ -32,15 +33,5 @@
 		<start-class>org.wscale.mountains.MsTemplateProjectApplication</start-class>
 		<jsondoc.version>1.2.17</jsondoc.version>
 	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
 
 </project>
