--- a/ms-commons-tests/pom.xml
+++ b/ms-commons-tests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mountains</artifactId>
         <groupId>org.wscale</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
